fixed README and desktop view overflow

--- a/style.css
+++ b/style.css
@@ -124,6 +124,9 @@ body {
 }
 
 @media screen and (min-width: 1030px) {
+  body {
+    overflow: hidden;
+  }
   .card {
     max-width: 920px;
     flex-direction: row;
